Changed signature width to prevent overflow

--- a/public/stylesheets/snorby.css
+++ b/public/stylesheets/snorby.css
@@ -1271,7 +1271,7 @@ ul.table div.content li .row{
 }
 
 ul.table div.content li .row .signature{
-	width: 430px;	
+	width: 420px;	
 }
 
 ul.table div.content li .row.classified .signature{
